[package]
name = "bevy_mqtt"
description = "A simple MQTT client for Bevy ECS"
version = "0.4.2"
edition = "2021"
readme = "README.md"
repository = "https://github.com/foxzool/bevy_mqtt"
authors = ["FoxZoOL <zhooul@gmail.com>"]
license = "MIT OR Apache-2.0"
categories = ["game-development", "network-programming"]
keywords = ["bevy", "mqtt", "plugin"]

[features]
websocket = ["rumqttc/websocket"]
proxy = ["rumqttc/proxy"]
native-tls = ["rumqttc/use-native-tls"]
rust-tls = ["rumqttc/use-rustls"]

[dependencies]
bevy_app = { version = "0.14.2" }
bevy_ecs = { version = "0.14.2" }
bevy_log = { version = "0.14.2" }
bevy_derive = { version = "0.14.2" }
bevy_reflect = { version = "0.14.2" }
bevy_hierarchy = { version = "0.14.2" }

rumqttc = { version = "0.24.0" }
flume = { version = "0.11.0" }
bytes = "1"
regex = { version = "1.10.6" }

[dev-dependencies]
bevy = { version = "0.14.2", default-features = false }


[[example]]
name = "pub_and_sub"
path = "examples/pub_and_sub.rs"
required-features = ["websocket"]

