[package]
name = "bevy_mqtt"
description = "A robust, secure MQTT client plugin for Bevy game engine with comprehensive error handling and performance optimizations"
version = "0.8.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/foxzool/bevy_mqtt"
homepage = "https://github.com/foxzool/bevy_mqtt"
documentation = "https://docs.rs/bevy_mqtt"
authors = ["FoxZoOL <zhooul@gmail.com>"]
license = "MIT OR Apache-2.0"
categories = ["game-development", "network-programming"]
keywords = ["bevy", "mqtt", "ecs", "gamedev"]

[features]
websocket = ["rumqttc/websocket"]
proxy = ["rumqttc/proxy"]
native-tls = ["rumqttc/use-native-tls"]
rust-tls = ["rumqttc/use-rustls"]

[dependencies]
bevy_app = { version = "0.17" }
bevy_ecs = { version = "0.17" }
bevy_log = { version = "0.17" }
bevy_derive = { version = "0.17" }
bevy_reflect = { version = "0.17" }

rumqttc = { version = "0.24.0" }
flume = { version = "0.11.0" }
bytes = "1"
regex = { version = "1.10.6" }

[dev-dependencies]
bevy = { version = "0.17", default-features = false }


[[example]]
name = "pub_and_sub"
path = "examples/pub_and_sub.rs"
required-features = ["websocket"]
